# rurl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  error.rs  main.rs  output.rs  progress.rs  request.rs  response.rs
tests/: auth.rs  basic_http.rs  form.rs  output.rs  redirect.rs
tests/helpers/: mock_server.rs
