[package]
name = "rurl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A curl-compatible HTTP client written in Rust"
license = "MIT"
repository = "https://github.com/knakazawa99/rurl"
keywords = ["curl", "http", "cli", "client"]
categories = ["command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "rurl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "multipart", "gzip", "deflate"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
indicatif = "0.17"
console = "0.15"
serde_json = "1"
url = "2"
mime_guess = "2"
bytes = "1"
base64 = "0.22"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.5"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["full"] }
tempfile = "=3.8.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
